force-app/main/default/objects/Contact/fields/EADM_Email__c.field-meta.xml
<CustomField>
    <fullName>EADM_Email__c</fullName>
    <description>Banner EADM email field.</description>
    <inlineHelpText>Banner EADM email field.</inlineHelpText>
    <label>EADM Email</label>
    <type>Email</type>
</CustomField>