force-app/main/default/objects/Contact/fields/Midpoint_Email__c.field-meta.xml
<CustomField>
    <fullName>Midpoint_Email__c</fullName>
    <description>Should look like First.Last@colostate.edu</description>
    <inlineHelpText>Should look like First.Last@colostate.edu</inlineHelpText>
    <label>Midpoint Email</label>
    <type>Email</type>
</CustomField>