force-app/main/default/objects/Contact/fields/Primary_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Primary_Academic_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The primary program enrollment for the student. Should be filled on hed__Program_Enrollment__c creation, and only updated if the enrollment is complete &amp; a new enrollment is added.</description>
    <inlineHelpText>The primary program enrollment for the student. Should be filled on hed__Program_Enrollment__c creation, and only updated if the enrollment is complete &amp; a new enrollment is added.</inlineHelpText>
    <label>Primary Academic Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollees</relationshipLabel>
    <relationshipName>Program_Enrollees</relationshipName>
    <type>Lookup</type>
</CustomField>